# mcu-utils

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
include/: device.h  util_preproc.h
include/adc/: mu_adc.h
include/bus/: bus.h  bus_host.h
include/codec/: cobs.h
include/fs/: fs.h
include/gpio/: gpio.h  gpio_host.h  gpio_target.h
include/hwid/: hwid.h
include/leds/: led_ctrl.h  led_rgb.h  led_single.h
include/rtc/: mu_rtc.h  rtc.h  rtc_conf.h  zrtc.h
include/storage/: storage.h
include/time/: timer.h  timer_handler.h  timer_handler_fake.h  uptime.h
include/utils/: hsm.h
include/workqueue/: work.h  work_handler.h  work_handler_fake.h
lib/: CMakeLists.txt  Kconfig
lib/adc/: CMakeLists.txt  Kconfig
lib/adc/src/: mu_adc.c
lib/bus/: CMakeLists.txt  Kconfig
lib/bus/src/: bus.c
lib/codec/: CMakeLists.txt  Kconfig
lib/codec/src/: cobs.c
lib/fs/: CMakeLists.txt  Kconfig
lib/fs/src/: fs.c
lib/gpio/: CMakeLists.txt  Kconfig
lib/gpio/src/: gpio.c  gpio_host.h  gpio_target.h
lib/hwid/: CMakeLists.txt  Kconfig
lib/hwid/src/: hwid.c  hwid_shell.c
lib/leds/: CMakeLists.txt  Kconfig
lib/leds/src/: led_ctrl.c  led_rgb.c  led_single.c
lib/rtc/: CMakeLists.txt  Kconfig
lib/rtc/src/: mu_rtc.c  rtc.c
lib/storage/: CMakeLists.txt  Kconfig
lib/storage/src/: storage.c
lib/time/: CMakeLists.txt  Kconfig
lib/time/src/: timer.c  uptime.c
lib/utils/: CMakeLists.txt  Kconfig
lib/utils/src/: hsm.c
lib/workqueue/: CMakeLists.txt  Kconfig
lib/workqueue/src/: work.c
modules/googletest/: CMakeLists.txt  Kconfig
modules/googletest/zephyr/: module.yml
tests/unit/: CMakeLists.txt  CustomGtestMacros.h  main.cpp  prj.conf  testcase.yaml
tests/unit/codec/: CobsTests.cpp
tests/unit/fakes/: bus_fake.cpp  bus_fake.h  clock_fake.cpp  clock_fake.h  timer_fake.cpp  timer_fake.h  work_fake.cpp  work_fake.h
tests/unit/mocks/: adc_mock.cpp  adc_mock.h  device_mock.cpp  device_mock.h  fs_mock.cpp  fs_mock.h  gpio_mock.cpp  gpio_mock.h  hsm_fn_mock.cpp  hsm_fn_mock.h  hsm_mock.cpp  hsm_mock.h  hwid_mock.cpp  hwid_mock.h  led_rgb_mock.cpp  led_rgb_mock.h  led_single_mock.cpp  led_single_mock.h  mu_rtc_mock.cpp  mu_rtc_mock.h  rtc_mock.cpp  rtc_mock.h  storage_mock.cpp  storage_mock.h  uptime_mock.cpp  uptime_mock.h  zrtc_mock.cpp  zrtc_mock.h
tests/unit/rtc/: RtcTests.cpp
tests/unit/utils/: HsmTests.cpp  HsmTests.h
zephyr/: module.yml
